samples/_failures_safe/1761265389_c4d275_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e225f7cd.c: In function ‘read_token’:
./samples/SAFE/__tmp_e225f7cd.c:159:5: error: expected identifier at end of input
  159 |     token->
      |     ^~~~~
./samples/SAFE/__tmp_e225f7cd.c:159:5: error: expected declaration or statement at end of input
